--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <script src="box1.js"></script>
       <!-- <script src="image.js"></script> -->
       <script src="sketch.js"></script>
-      <script src="paper.js"></script>
+      <script src="Paper.js"></script>
       <script src="box.js"></script>
 
     </head>
